# procurement-ai

./: .gitignore  Dockerfile.api  README.md  VERSIONS.md  alembic.ini  docker-compose.yml  init_db.sh  procurement_mvp.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_api_test.sh  test_api.sh
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 20260202_1204_d590cd36ccb8_initial_schema.py  20260205_0900_add_organization_api_key.py
docs/: API.md  CHANGES.md  LEARNING_PATH.md  QUICKSTART.md  RAG_IMPLEMENTATION.md  RAG_SUMMARY.md  README.md
docs/docs/: experiment_01_results.md  experiment_02_results.md
examples/: README.md  batch_processing.py  database_usage.py  quickstart.py  sample_data.py  scrape_and_save.py  scrape_tenders.py  seed_database.py
experiments/: 01_prompt_varations.py  02_temperature_impact.py
learn/: 01_hello_llm.ipynb  02_mvp_complete.ipynb  02_structured_outputs.ipynb  03_filter_agent.ipynb  04_rating_agent.ipynb  05_doc_generator.ipynb  06_orchestration.ipynb  07_production_ready.ipynb  08_evaluating_ai_agents.ipynb  09_rag_document_improvement.ipynb  10_mvp_complete.ipynb
scripts/: README.md  fetch_and_store.py  init_db.sh  manage_kb.py  quickstart.sh  sample_kb_data.py  setup_api_test.sh  start_web.sh  ted_scraper_minimal.py  test_api.sh  test_web_ui.sh  view_database.py
src/procurement_ai/: __init__.py  config.py  models.py
src/procurement_ai/agents/: __init__.py  filter.py  generator.py  rating.py
src/procurement_ai/api/: __init__.py  dependencies.py  main.py  schemas.py
src/procurement_ai/api/routes/: tenders.py  web.py
src/procurement_ai/api/templates/: analysis_result.html  base.html  dashboard.html  tender_detail.html  tender_list.html
src/procurement_ai/evaluation/: README.md  __init__.py  evaluator.py  metrics.py  reporters.py  run.py
src/procurement_ai/orchestration/: __init__.py  simple_chain.py
src/procurement_ai/rag/: __init__.py  embeddings.py  knowledge_base.py  retriever.py  vector_store.py
src/procurement_ai/scrapers/: __init__.py  exceptions.py  ted_scraper.py
src/procurement_ai/services/: __init__.py  llm.py
src/procurement_ai/storage/: README.md  __init__.py  database.py  models.py  repositories.py
tests/: conftest.py  debug_get_context.py  test_rag_concepts.py
tests/e2e/: README.md  __init__.py  test_end_to_end.py
tests/fixtures/: evaluation_dataset.py  sample_data.py
tests/integration/: test_api.py  test_rag_integration.py  test_workflows.py
tests/unit/: test_agents.py  test_evaluation_metrics.py  test_llm_service.py  test_orchestration.py  test_rag.py  test_repositories.py  test_ted_scraper.py
